--- a/Main.html
+++ b/Main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/reset.css">
     <title>Informações</title>
     <link rel="stylesheet" href="/Coecx/Edu/style.css">
 </head>
@@ -22,17 +23,36 @@
     </header>
 
     <section class="penta">
-        <h2>Obras básicas</h2>
-        <h3>O Pentateuco Espírita (também chamado de Obras Básicas) é o conjunto de cinco livros publicados por Allan Kardec entre 1857 e 1868. Esses livros constituem a base fundamental da Doutrina Espírita, abordando seus aspectos científicos, filosóficos e religiosos.
-            <br>
-            Diferente do Pentateuco bíblico (os cinco livros de Moisés), o espírita não é uma narrativa histórica, mas uma codificação de ensinos obtidos através do diálogo com os espíritos.</h3>
-            <br>
-        <img src="/Coecx/Edu/assets/livrodosesp.jpg" alt="Livro dos Espíritos">
-        <img src="/Coecx/Edu/assets/ceueinferno.jpg" alt="Céu e Inferno">
-        <img src="/Coecx/Edu/assets/evang.jpg" alt="">
-        <img src="/Coecx/Edu/assets/mediuns.jpg" alt="">
-        <img src="/Coecx/Edu/assets/genesis.jpg" alt="">
+        <h1>Obras básicas</h1>
+        <h2>O Pentateuco Espírita (também chamado de Obras Básicas) é o conjunto de cinco livros publicados por Allan Kardec entre 1857 e 1868. Esses livros constituem a base fundamental da Doutrina Espírita, abordando seus aspectos científicos, filosóficos e religiosos.
+            Diferente do Pentateuco bíblico (os cinco livros de Moisés), o espírita não é uma narrativa histórica, mas uma codificação de ensinos obtidos através do diálogo com os espíritos.</h2>
     </section>
+
+    <div class="container-obras">
+        <img class="livroesp" src="/Coecx/Edu/assets/livrodosesp.jpg" alt="Livro dos Espíritos">
+        <h3 class="livroesp">Os princípios da doutrina espírita sobre a imortalidade da alma, a natureza dos Espíritos e suas relações com os homens, as leis morais, a vida presente, a vida futura e o porvir da humanidade</h3>   
+        
+        <hr>
+
+        <h3 class="ceuinfer"> Exame comparado de doutrinas sobre a passagem da vida corporal à vida espiritual, sobre as penalidades e recompensas futuras, sobre os anjos e demônios, sobre as penas, etc.
+        Seguido de numerosos exemplos acerca da situação real da alma durante e depois a morte.</h3>
+        <img src="/Coecx/Edu/assets/ceueinferno.jpg" alt="Céu e Inferno">
+
+        <hr>
+
+        <h3 class="evangelho">A explicação das máximas morais do Cristo, sua concordância com o Espiritismo, e sua aplicação às diversas circunstâncias da vida.</h3>
+        <img src="/Coecx/Edu/assets/evang.jpg" alt="Evangelho Seg. Espiritismo">
+
+        <hr>
+
+        <img src="/Coecx/Edu/assets/mediuns.jpg" alt="O Livro dos Mediuns">
+        <h3 class="mediuns">Sobre a teoria de todos os gêneros de manifestações, os meios de comunicação com o mundo invisível, o desenvolvimento da mediunidade, as dificuldades e os tropeços que se podem encontrar na prática do Espiritismo.</h3>
+
+        <hr>
+        
+        <h3 class="genesis">A doutrina espírita há resultado do ensino coletivo e concordante dos Espíritos, a ciência é chamada a constituir a Gênese de acordo com as leis da natureza, Deus prova a sua grandeza e o seu poder pela imutabilidade das suas leis e não pela ab-rogação delas, para Deus, o passado e o futuro são o presente.</h3>
+        <img src="/Coecx/Edu/assets/genesis.jpg" alt="A Genesis">
+    </div>
 
 </body>
 </html>
