--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/reset.css">
-    <title>Informações</title>
+    <title>O Espiritismo</title>
     <link rel="stylesheet" href="/Coecx/Edu/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <li class="menu-cabecalho_item">O Espiritismo</li>
                 <li class="menu-cabecalho_item">Estudos</li>
                 <li class="menu-cabecalho_item">Palestras e Eventos</li>
-                <button class="login">login</button>
+                <button class="login">Login</button>
             </ul>
         </div>
     </header>
@@ -40,18 +40,20 @@
 
         <hr>
 
-        <h3 class="evangelho">A explicação das máximas morais do Cristo, sua concordância com o Espiritismo, e sua aplicação às diversas circunstâncias da vida.</h3>
         <img src="/Coecx/Edu/assets/evang.jpg" alt="Evangelho Seg. Espiritismo">
+        <h3 class="evangelho">A explicação das máximas morais do Cristo, sua concordância com o Espiritismo, e sua aplicação às diversas circunstâncias da vida.</h3>
 
         <hr>
 
-        <img src="/Coecx/Edu/assets/mediuns.jpg" alt="O Livro dos Mediuns">
         <h3 class="mediuns">Sobre a teoria de todos os gêneros de manifestações, os meios de comunicação com o mundo invisível, o desenvolvimento da mediunidade, as dificuldades e os tropeços que se podem encontrar na prática do Espiritismo.</h3>
-
+        <img src="/Coecx/Edu/assets/mediuns.jpg" alt="O Livro dos Mediuns">
+       
         <hr>
         
-        <h3 class="genesis">A doutrina espírita há resultado do ensino coletivo e concordante dos Espíritos, a ciência é chamada a constituir a Gênese de acordo com as leis da natureza, Deus prova a sua grandeza e o seu poder pela imutabilidade das suas leis e não pela ab-rogação delas, para Deus, o passado e o futuro são o presente.</h3>
         <img src="/Coecx/Edu/assets/genesis.jpg" alt="A Genesis">
+        <h3 class="genesis">A doutrina espírita há resultado do ensino coletivo e concordante dos Espíritos, a ciência é chamada a constituir a Gênese de acordo com as leis da natureza, Deus prova a sua grandeza e o seu poder pela imutabilidade das suas leis e não pela ab-rogação delas, para Deus, o passado e o futuro são o presente.</h3>
+
+        <hr>
     </div>
 
 </body>
